Set active_from and active_until in GET /devices to be an integer

--- a/config/jane/open-api.yaml
+++ b/config/jane/open-api.yaml
@@ -567,11 +567,11 @@ paths:
         - name: active_from
           in: query
           schema:
-            type: number
+            type: integer
         - name: active_until
           in: query
           schema:
-            type: number
+            type: integer
         - name: limit
           in: query
           schema:
