--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "php-http/guzzle7-adapter": "^1.0",
     "nyholm/psr7": "^1.4",
     "monolog/monolog": "^2.3",
-    "php-http/logger-plugin": "^1.2"
+    "php-http/logger-plugin": "^1.2",
+    "symfony/dotenv": "^5.3"
   },
   "extra": {
     "symfony": {
