--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     }
   },
   "require": {
-    "jane-php/open-api-runtime": "~6.3.0",
+    "jane-php/open-api-runtime": "^7.0",
     "league/oauth2-client": "^2.6"
   },
   "require-dev": {
     "symfony/flex": "^v1.0",
     "friendsofphp/php-cs-fixer": "^3.0",
-    "jane-php/open-api-3": "~6.3.0",
+    "jane-php/open-api-3": "^7.0",
     "php-http/guzzle7-adapter": "^1.0",
     "nyholm/psr7": "^1.4",
     "monolog/monolog": "^2.3",
